[package]
name = "soustraire"
version = "0.1.0"
authors = ["Chung-Kuan Chen <b97b01045@gmail.com>"]
edition = "2021"
rust-version = "1.65"


[dependencies]
egui = "0.22.0"
eframe = { version = "0.22.0", default-features = false, features = ["accesskit", "default_fonts", "glow", "persistence"] }

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }
image = "0.24.6"
imageproc = "0.23.0"
rayon = "1.7.0"
glob = "0.3.1"
rfd = "0.11"
serde_json = "1.0.96"
itertools = "0.10.5"
rusttype = "0.9.3"
csv = "1.2.1"
poll-promise = "0.2.0"
dirs = "5.0.1"
num_cpus = "1.15.0"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"
poll-promise = "0.2.0"


# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"
pollster = "0.3.0"
poll-promise = { version = "0.2.0", features = ["web"] }




[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
